--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
-h1 {
-   color: blue;
+.FonteVerte {
+   color: rgb(228, 37, 37);
+   font-size: larger;
+}
+.fondBleu{
+   background-color: cyan;
 }
