--- a/css/styles.css
+++ b/css/styles.css
@@ -482,7 +482,7 @@ footer a {
   margin-right: 5px;
 }
 /********************Tablettes ****************************************************/
-@media screen and (min-width: 376px) and (max-width: 992px) {
+@media screen and (min-width: 701px) and (max-width: 992px) {
   body {
     max-width: 768px;
   }
@@ -596,14 +596,14 @@ footer a {
 }
 /********************************smarphone ****************************************/
 
-@media screen and (max-width: 376px) /* smarphone */ {
+@media screen and (min-width:365px) and (max-width: 700px) /* smarphone */ {
   #body {
-    width: 380px;
+    width: auto;
     height: min-content;
   }
 
   #page {
-    width: 375px;
+    width: auto;
     font-family: "Raleway";
     margin: 0px;
   }
@@ -922,8 +922,10 @@ footer a {
 
   .Banniere_Image {
     /* ------------------- Banniere image hotel 1 --------------------------------*/
-    height: 120px;
-    width: 100%;
+    /*height: 120px;*/
+     
+    height: 20vh;
+    width:100%;
     /* border:1px rgb(226, 33, 49) solid;   bour debug*/
     margin-bottom: 0px;
     border-radius: 10px 10px 1px 1px;
@@ -1139,3 +1141,14 @@ footer a {
     margin-bottom: 20px;
   }
 }
+ 
+@media screen and (min-width: 500px) and(max-width: 700px) /* smarphone */ {
+.Banniere_Image {
+  /* ------------------- Banniere image hotel 1 --------------------------------*/
+   
+   
+height: 40vh;
+  width: 100%;
+}
+}
+ 
